[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/appleFonts.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/OperationNote.gd" type="Script" id=2]
[ext_resource path="res://Icon/UITexture/Icon_Return.png" type="Texture" id=3]
[ext_resource path="res://Icon/UITexture/Icon_SqiuareTilt.png" type="Texture" id=4]
[ext_resource path="res://Scene/ContainerPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/SearchPanel.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="OperationNote" type="Node2D"]
script = ExtResource( 2 )

[node name="SearchPanel" parent="." instance=ExtResource( 6 )]

[node name="KnowledgePanel" parent="." instance=ExtResource( 5 )]

[node name="OperationNoteKnowledgePanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.54902, 0, 1, 1 )
margin_right = 1152.0
margin_bottom = 592.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListTitlePanel" type="Panel" parent="OperationNoteKnowledgePanel"]
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 24.0
margin_top = 24.0
margin_right = 192.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_right = 168.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/ChatBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "   简介"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/ChatBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstallBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 80.0
margin_right = 168.0
margin_bottom = 144.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstallLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/InstallBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  部署"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/InstallBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 160.0
margin_right = 168.0
margin_bottom = 224.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/MainBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  提问"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/MainBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadBtn" type="Button" parent="OperationNoteKnowledgePanel/ListTitlePanel"]
margin_top = 240.0
margin_right = 168.0
margin_bottom = 304.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadLabel" type="Label" parent="OperationNoteKnowledgePanel/ListTitlePanel/DownloadBtn"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "  下载"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="OperationNoteKnowledgePanel/ListTitlePanel/DownloadBtn"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListChatPanel" type="Panel" parent="OperationNoteKnowledgePanel"]
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListInstallPanel" type="Panel" parent="OperationNoteKnowledgePanel"]
visible = false
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListDownloadPanel" type="Panel" parent="OperationNoteKnowledgePanel"]
visible = false
self_modulate = Color( 0.545098, 0, 1, 0.0980392 )
margin_left = 192.0
margin_top = 24.0
margin_right = 1128.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="OperationNoteKnowledgePanel"]
margin_left = 1088.0
margin_right = 1152.0
margin_bottom = 64.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackImg" type="TextureRect" parent="OperationNoteKnowledgePanel/BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIYSort" type="YSort" parent="OperationNoteKnowledgePanel"]
visible = false
position = Vector2( 768, 528 )

[node name="YumBtn" type="Button" parent="OperationNoteKnowledgePanel/UIYSort"]
margin_left = 16.0
margin_top = 14.0
margin_right = 80.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
text = "Yum安装"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RpmBtn" type="Button" parent="OperationNoteKnowledgePanel/UIYSort"]
margin_left = 104.0
margin_top = 14.0
margin_right = 168.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
text = "Rpm安装"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MakeBtn" type="Button" parent="OperationNoteKnowledgePanel/UIYSort"]
margin_left = 192.0
margin_top = 14.0
margin_right = 256.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "编译安装"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/ChatBtn" to="." method="_on_ChatBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/InstallBtn" to="." method="_on_InstallBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/MainBtn" to="." method="_on_MainBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/ListTitlePanel/DownloadBtn" to="." method="_on_DownloadBtn_pressed"]
[connection signal="pressed" from="OperationNoteKnowledgePanel/BackBtn" to="." method="_on_BackBtn_pressed"]

[editable path="SearchPanel"]
[editable path="KnowledgePanel"]
